Repair broken layout

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -5865,7 +5865,7 @@ ul.list-icons li i {
 
 .info-box {
     background: #fff;
-    padding: 40px 30px 35px 25px;
+    padding: 20px 10px 15px 15px;
     border-right: 1px solid #e5ebec;
     border-bottom: 1px solid #e5ebec
 }
